<video> element delays document load event for ~ 3 seconds https://bugs.webkit.org/show_bug.cgi?id=90272

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-06-18
Reviewed by Eric Carlson.

Source/WebCore:

Test: media/media-preload-no-delay-loadevent.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::prepareForLoad):
No need to delay document load event here  when preload="none"

LayoutTests:

* media/media-preload-no-delay-loadevent-expected.txt: Added.
* media/media-preload-no-delay-loadevent.html: Added.

Canonical link: https://commits.webkit.org/135876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151684 268f45cc-cd09-0410-ab3c-d52691b4dbfc